crates/plotnik-tests/tests/02-parser/recovery_validation/missing_with_bang_negation.txt
Q = (MISSING !name)
------------------ DIAGNOSTICS -------------------
error: `(MISSING)` takes at most a node kind or a quoted token
 --> query.ptk:1:14
  |
1 | Q = (MISSING !name)
  |              ^^^^^
  |
help: remove the children
  |
1 - Q = (MISSING !name)
1 + Q = (MISSING )
  |
help: a missing node is a zero-byte node inserted by error recovery. Give `MISSING` at most one node kind or quoted token
